# ros-repo-4

./: README.md
ai_server/: ai_server.py  ai_server1.py  ai_server2.py  body_follower.py  follow_and_pause.py  hand_gesture_detector_only.py  hand_model.pkl  img_publisher.py  img_publisher2.py  missing_face_2.py  no_multicast_udp_receiver.py  no_multicast_upd_sender.py  temp.py  test_client.py  test_receiver.py  udp_connection.py
ai_server/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ai_server/lanz_calibration/: calibration_data160.pkl  calibration_minibot17.pkl
ai_server/log/: latest_build
aruco_follower/: package.xml  setup.py
aruco_follower/aruco_follower/: aruco_follower copy 2.py  aruco_follower copy.py  aruco_follower.py  aruco_follower_bt_bak.py  aruco_follower_with_odom.py  aruco_follower_wo_bt.py  aruco_test.py
aruco_follower/calibration/: calibration_minibot11.pkl  calibration_minibot25.pkl  calibration_minibot5.pkl
aruco_follower/launch/: aruco_follower_launch.py
baby_boose_user_server/: main.py  tcp_server.py  test_client.py
baby_boose_user_server/routers/: api.py  pages.py  websockets.py
baby_boose_user_server/templates/: cargo_open.html  face_identification.html  face_recognition.html  follow_pause.html  gate.html  home.html  thanks.html  unloading.html
baby_boose_user_server/utils/: helpers.py
cargo/ros2_ws/: README.md
googeese_pkg/googeese_control_pkg/: package.xml  setup.cfg  setup.py
minibot_ws/maps/: map_4th_rev01.pgm  map_4th_rev01.yaml  (+28 more)
navigate_waypoints/: package.xml  setup.cfg  setup.py
(+105 files in other folders)
